<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="add_city_dialog">Добавление города</string>
    <string name="hint_name_dialog">Пример: Москва</string>
    <string name="hint_code_dialog">Пример: Moscow,ru</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>
    <string name="repeat_detailed">Повторить</string>
    <string name="error_connection">Ошибка получения данных с сервера! Проверьте подключение к интернету и попробуйте
        заново.
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_listener">Добавть слушатель</string>
    <string name="description_listener_dialog">Сообщить если темпиратура станет:</string>
    <string name="more">Больше</string>
    <string name="less">Меньше</string>
    <string name="text_degrees">Градусов</string>
</resources>
