<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:text="@string/add_city_dialog"
            android:id="@+id/description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/nameCityDialog"
        android:hint="@string/hint_name_dialog"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/codeCityDialog"
            android:hint="@string/hint_code_dialog"
            app:layout_constraintTop_toBottomOf="@+id/nameCityDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/cancelDialog"
            android:text="@string/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/okDialog"
            app:layout_constraintTop_toBottomOf="@+id/codeCityDialog"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

    <Button
            android:id="@+id/okDialog"
            android:text="@string/ok"
            app:layout_constraintLeft_toRightOf="@+id/cancelDialog"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeCityDialog"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

    <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeCityDialog"
            android:id="@+id/loading_dialog"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cpv_animAutostart="true"
            app:cpv_color="@color/colorPrimary"
            app:cpv_indeterminate="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
